--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site 站点信息
-title: ChamFlightChen's Blog
+title: CharmFlightChen's Blog
 subtitle: 留心处处皆学问，人情练达即文章
 description: 脚踏实地，积少成多，集腋成裘
-keywords: java database
+keywords: java database linux
 author: CharmFlightChen
 language: zh-CN
 timezone: UTC
@@ -136,3 +136,10 @@ excerpt:
   excerpt_excludes: []
   more_excludes: []
   hideWholePostExcerpts: true
+
+highlight_theme: normal
+  normal
+  night
+  night eighties
+  night blue
+  night bright
